--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ dkms.conf
 /A380手持机PC通讯工具/通信工具
 /A380手持机PC通讯工具/USB驱动
 /arm
+/doc/6009_和龙定制版/手持机抄表接口程序和龙
+/doc/6009_和龙定制版/HT-2900和龙程序
+/doc/6009_和龙定制版/和龙
