--- a/src/.vscode/tasks.json
+++ b/src/.vscode/tasks.json
@@ -91,8 +91,7 @@
                 "${file}",
                 "-shared",
                 "-o",
-                "${fileBasenameNoExtension}.dll"    // dynamic lib
-                //"-Wl,--output-def,${fileBasenameNoExtension}.def,--out-implib,${fileBasenameNoExtension}.a" // static lib
+                "${fileBasenameNoExtension}.dll"
             ],
             "options": {
                 "cwd": "${fileDirname}"
